--- a/resume.html
+++ b/resume.html
@@ -70,7 +70,7 @@
 			<a href="#techSkills"><li>Skills</li></a>
 			<a href="#workExperience"><li>Work Experience</li></a>
 			<a href="#studentOrg"><li>Leadership Experience</li></a>
-			<a href="#projects"><li>Featured Projects</li></a>
+			<a href="#projectsSection"><li>Featured Projects</li></a>
 			<a href="#resumeTitle"><li>Back to Top &uarr;</li></a>
 		</ul>
 
@@ -81,7 +81,7 @@
 		<a href="#techSkills"><div class = "circle"></div></a>
 		<a href="#workExperience"><div class = "circle"></div></a>
 		<a href="#studentOrg"><div class = "circle"></div></a>
-		<a href="#projects"><div class = "circle"></div></a>
+		<a href="#projectsSection"><div class = "circle"></div></a>
 
 	</aside>
 
@@ -234,7 +234,7 @@
 					<div class = "line"></div>
 
           <!-- Projects  -->
-					<section id = "projects">
+					<section id = "projectsSection">
 						<h1>Featured Projects</h1>
 
 						<div class = "projectContainer">
