--- a/projects.html
+++ b/projects.html
@@ -75,6 +75,7 @@
   	<div class = "container">
   	   <div class = "mainContent">
 
+         <!--Rain Gauge -->
          <section id = "rainGauge">
            <h1>Electronic Rain Gauge</h1>
            <h2>Senior design project sponsored by
@@ -83,9 +84,18 @@
              <button class = "githubButton">View on GitHub <span class="fab fa-github"></span>
              </button></a>
            <br>
-           <img src = "img/projects/rainGauge/rainGauge.jpg" alt = "Rain Gauge" width= 80% style = "margin-left: auto; margin-right:auto; display: block"></img>
+
+           <figure>
+             <img src = "img/projects/rainGauge/rainGauge.jpg" alt = "Rain Gauge" width= 70%></img>
+             <figcaption>Rain gauge setup, including the PVC pipe where the rainwater
+               is held and a waterproof box to hold the electronics.</figcaption>
+           </figure>
            <br>
-           <img src = "img/projects/rainGauge/rainGaugeElectronics.jpg" alt = "Rain Gauge Electronics" width = 100% style = "margin-left: auto; margin-right:auto; display: block"></img>
+
+           <figure>
+             <img src = "img/projects/rainGauge/rainGaugeElectronics.jpg" alt = "Rain Gauge Electronics" width = 100%></img>
+             <figcaption>Interior of the waterproof box showing the electronics.</figcaption>
+           </figure>
 
            <h3>Overview</h3>
            <p>As a part of my year-long senior project, I worked in an
@@ -118,29 +128,110 @@
               rain data with minimal maintenance, which includes retrieving the
               SD card to collect the data and changing the batteries.</p>
 
-           <h3>My role within the Project</h3>
+           <h3>My Role within the Project</h3>
            <p>I interfaced various electronic components with the
-             microcontroller by wiring the connections on a breadboard and
-             writing Arduino code to control the components.
-             I worked on the construction of the rain gauge and  designed the
+             microcontroller using SPI and I2C and
+             wrote Arduino code to control the components.
+             I worked on the construction of the rain gauge and designed the
              waterproof housing for the pressure sensors. Additionally, I played a
              leadership role in the project by organizing meetings and
-             communicating with the facuty advisors and project sponsor.</p>
+             communicating with the facuty advisors and project sponsor on behalf of the team.</p>
          </section> <!--END rain gauge section -->
 
          <div class = "line"></div>
 
+         <!-- Smart Light -->
          <section id = "smartLightProj">
            <h1>Smart Light System</h1>
            <h2>Final project in my Internet of Things class</h2>
            <a href = "https://github.com/stephaniekyyip/smartLight" >
              <button class = "githubButton">View on GitHub <span class="fab fa-github"></span>
              </button></a>
+           <br>
+
+           <figure>
+             <img src = "img/projects/smartLight/smartLightSetup.jpg"  alt = "Smart Light Setup" width= 100%></img>
+             <figcaption>Smart light setup with the LED bulb in a lamp, the electronics contained in a cardboard box,
+             and a portable charger to power the Raspberry Pi.</figcaption>
+           </figure>
+           <br>
+
+           <figure>
+             <img src = "img/projects/smartLight/smartLightElectronics.jpg"  alt = "Smart Light Electronics" width= 100%></img>
+             <figcaption>Interior of the box containing the electronics, including the Raspberry Pi and the battery pack for the LED bulb.</figcaption>
+          </figure>
+
+          <figure>
+            <img src = "img/projects/smartLight/smartLightGUI.png"  alt = "Smart Light GUI" width= 100% style = "border: 1px solid #7D9AB0"></img>
+            <figcaption>Webpage user interface that allowed users to control the smart light.</figcaption>
+         </figure>
+
+           <h3>Overview</h3>
+           <p>For the final project in our Internet of Things course, my team
+             decided to create a smart light system to remotely control a LED
+             bulb. The idea behind the smart light was to conserve energy by
+             being able to remotely turn off lights and adjust the brightness
+             depending on the ambient light.</p>
+
+           <h3>How the Smart Light Works</h3>
+           <p>We interfaced the LED bulb, along with a photoresistor and a
+             transistor, with a Raspberry Pi. The photoresistor was used to
+             determine the ambient brightness of the room in order to adjust
+             the LED brightness accordingly. The transistor used with the
+             battery pack allowed us to vary the brightness of the LED using
+             the pulse width modulation (PWM) output from the Raspberry Pi. </p>
+
+           <h3>My Role within the Project</h3>
+           <p>I was responsible for the software side of the project. In order
+             to control the LED, I wrote Python scripts to adjust the LED
+             brightness by varying the PWM output. I also wrote a Python script
+             to read the input from the photoresistor to allow the option of
+             automatically adjusting the brightness depending on the ambient
+             light in the room. After setting up an Apache server on the Raspberry
+             Pi, I created the user interface using HTML for users to select
+             different LED settings and used PHP to retrieve the user input in
+             order to execute the Python scripts. </p>
+         </section> <!--END smart light section -->
+
+         <div class = "line"></div>
+         <!-- Puppet -->
+         <section id = "puppetProj">
+           <h1>Automated Dancing Puppet</h1>
+           <h2>Third year electrical engineering lab project</h2>
+
+           <br>
+           <video controls="controls" width=100%
+           name="Puppet Demo" src="img/projects/puppet/puppetDemo.mov" style="padding-top:20px"></video>
+           <figcaption>Demo of puppet movements.</figcaption>
+
+           <h3>Overview</h3>
+           <p>As a part of my electrical engineering labs during junior year, I
+             worked with a lab partner to implement a marionette puppet that
+             performed a dance routine on command. The idea behind the project
+             was to become familiar with lab equipment and to develop engineering
+             troubleshooting and teamwork skills by working towards a project
+             throughout the school year. </p>
+
+            <h3>How the Puppet Works</h3>
+            <p>The puppet’s movements were controlled by various circuits and
+              programmed in C using a Raspberry Pi. A motor and a connected
+              optical encoder allowed for the control of the puppet’s limbs,
+              which included moving each limb up or down by a designated distance. </p>
+
+            <h3>My Role in the Project</h3>
+            <p>Though the lab instructors had done the final design for both the
+              hardware and software, my lab partner and I were responsible for the construction,
+              testing, and troubleshooting of the puppet. We had to read circuit
+              schematics, build and test the circuits and hardware, modify C code
+              to control the puppet’s dance moves, and integrate and troubleshoot
+              both the software and hardware. I focused mainly on the software
+              side of the project amd worked together with my partner on other areas
+              of the project, particularly the troubleshooting and testing aspects.</p>
 
          </section>
 
-  	    </div>
-  	</div>
+       </div> <!-- END main content -->
+  	</div> <!-- END container  -->
   </section>
 
 
