Added jumbotron img for Projects. Compressed img in Projects.

--- a/projects.html
+++ b/projects.html
@@ -49,7 +49,7 @@
 		</header>
 
 	<!-- Page Title Block -->
-		<section id = "projectsTitle"> <!--UPDATE PIC -->
+		<section id = "projectsTitle">
 
 			<div class = "container">
 				<section class = "pgTitleBlock">
@@ -75,6 +75,21 @@
   	<div class = "container">
   	   <div class = "mainContent">
 
+         <!-- Website -->
+         <section id = "website">
+           <h1>Personal Website</h1>
+           <h2>This engineering portfolio website</h2>
+           <a href = "https://github.com/stephaniekyyip/stephaniekyyip.github.io" >
+             <button class = "githubButton">View on GitHub <span class="fab fa-github"></span>
+             </button></a>
+
+           <h3>Overview</h3>
+           <p>I learned HTML5, CSS3, and JavaScript to create this website as my engineering
+           portfolio. Currently, it is a static website hosted on GitHub.</p>
+         </section>
+
+         <div class = "line"></div>
+
          <!--Rain Gauge -->
          <section id = "rainGauge">
            <h1>Electronic Rain Gauge</h1>
@@ -83,14 +98,14 @@
            <a href = "https://github.com/stephaniekyyip/electronicRainGauge" >
              <button class = "githubButton">View on GitHub <span class="fab fa-github"></span>
              </button></a>
-           <br>
+
 
            <figure>
              <img src = "img/projects/rainGauge/rainGauge.jpg" alt = "Rain Gauge" width= 70%></img>
              <figcaption>Rain gauge setup, including the PVC pipe where the rainwater
                is held and a waterproof box to hold the electronics.</figcaption>
            </figure>
-           <br>
+
 
            <figure>
              <img src = "img/projects/rainGauge/rainGaugeElectronics.jpg" alt = "Rain Gauge Electronics" width = 100%></img>
@@ -147,14 +162,14 @@
            <a href = "https://github.com/stephaniekyyip/smartLight" >
              <button class = "githubButton">View on GitHub <span class="fab fa-github"></span>
              </button></a>
-           <br>
+
 
            <figure>
              <img src = "img/projects/smartLight/smartLightSetup.jpg"  alt = "Smart Light Setup" width= 100%></img>
              <figcaption>Smart light setup with the LED bulb in a lamp, the electronics contained in a cardboard box,
              and a portable charger to power the Raspberry Pi.</figcaption>
            </figure>
-           <br>
+
 
            <figure>
              <img src = "img/projects/smartLight/smartLightElectronics.jpg"  alt = "Smart Light Electronics" width= 100%></img>
@@ -199,9 +214,9 @@
            <h1>Automated Dancing Puppet</h1>
            <h2>Third year electrical engineering lab project</h2>
 
-           <br>
-           <video controls="controls" width=100%
-           name="Puppet Demo" src="img/projects/puppet/puppetDemo.mov" style="padding-top:20px"></video>
+
+           <video controls width=100%
+           name="Puppet Demo" src="img/projects/puppet/puppetDemo.mov" type = "video/mov" style="margin-top:20px; border:1px solid #7D9AB0"></video>
            <figcaption>Demo of puppet movements.</figcaption>
 
            <h3>Overview</h3>
