--- a/resume.html
+++ b/resume.html
@@ -238,18 +238,18 @@
 						<h1>Featured Projects</h1>
 
 						<div class = "projectContainer">
-							<a href = "#" class = "projectBox" id = "sensors">
+							<a href = "projects.html#rainGauge" class = "projectBox" id = "sensors">
 
 								<h2>Electronic Rain Gauge</h2>
 
 							</a>
 
-							<a href = "#" class = "projectBox" id = "smartLight">
+							<a href = "projects.html#smartLightProj" class = "projectBox" id = "smartLight">
 								<h2>Smart Light System</h2>
 								<div class = "resumeContent"></div>
 							</a>
 
-							<a href = "#" class = "projectBox" id = "puppet">
+							<a href = "projects.html#puppetProj" class = "projectBox" id = "puppet">
 								<h2>Automated Dancing Puppet</h2>
 							</a>
 						</div>
