--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 		<section id = "about-writing">
 			<div class = "container">
 				<div class = "mainContent">
-					<h1>About Me</h1>
+					<h1>About</h1>
 					<p>I graduated from Seattle University in 2017 with a B.S. in Electrical
 						and Computer Engineering. The area that fascinates me the most is the
 						integration of hardware and software. I enjoy working on projects that
@@ -113,7 +113,9 @@
 						how the two fields interact with one another. Lately, I have also been interested
 						in learning more about software and technology further up the stack.
 					 </p>
+					<p>This website serves as a portfolio of both my engineering experiences and personal interests.</p>
 
+					 <!--
 					<h1>About This Website</h1>
 					<p>I have spent the past decade trying to learn HTML
 				 and CSS to create my own themes on various websites, starting with Neopets
@@ -123,7 +125,7 @@
 
 					<p>This website serves as a portfolio of my engineering projects and
 						experiences. In my free time, I dabble in photography and have
-						included that here as well.</p>
+						included that here as well.</p>-->
 				</div>
 			</div>
 
