--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 							<li class = "active"><a href = "index.html">Home</a></li>
 							<li><a href = "resume.html">Résumé</a></li>
 							<li><a href = "projects.html" >Projects</a></li>
-							<li><a href = "#">Photography</a></li>
+							<li><a href = "photography.html">Photography</a></li>
 							<li><a href = "contact.html">Contact</a></li>
 						</ul>
 					</div>
