--- a/projects.html
+++ b/projects.html
@@ -39,7 +39,7 @@
 							<li><a href = "index.html">Home</a></li>
 							<li ><a href = "resume.html">Résumé</a></li>
 							<li class = "active"><a href = "projects.html" >Projects</a></li>
-							<li><a href = "#">Photography</a></li>
+							<li><a href = "photography.html">Photography</a></li>
 							<li><a href = "contact.html">Contact</a></li>
 						</ul>
 					</div>
@@ -60,15 +60,6 @@
 			</div>
 
 		</section>
-
-	<!--Sidebar -->
-	<!--<aside id = "projectsSidebar">
-		<a href="#education"><div class = "circle"></div></a>
-		<a href="#techSkills"><div class = "circle"></div></a>
-		<a href="#workExperience"><div class = "circle"></div></a>
-		<a href="#studentOrg"><div class = "circle"></div></a>
-		<a href="#projects"><div class = "circle"></div></a>
-	</aside> -->
 
 	<!-- Main Content: Projects -->
   <section id = "projects">
