--- a/resume.html
+++ b/resume.html
@@ -13,7 +13,7 @@
 		<meta charset = "UTF-8">
 		<meta name="viewport" content="width=device-width initial-scale=1.0" />
 
-		<title> Stephanie Yip | Resume </title>
+		<title> Stephanie Yip | Résumé </title>
 
 		<link rel= "stylesheet" href="css/style.css"/>
 
@@ -39,7 +39,7 @@
 							<li><a href = "index.html">Home</a></li>
 							<li class = "active"><a href = "resume.html">Résumé</a></li>
 							<li><a href = "projects.html" >Projects</a></li>
-							<li><a href = "#">Photography</a></li>
+							<li><a href = "photography.html">Photography</a></li>
 							<li><a href = "contact.html">Contact</a></li>
 						</ul>
 					</div>
