--- a/photography.html
+++ b/photography.html
@@ -65,6 +65,28 @@
   <section id = "photography">
   	<div class = "container">
   	   <div class = "mainContent">
+         <p>I have been an avid photographer since my high school photography class.
+           During college, I enjoyed wandering Seattle with
+           my camera in tow and taking pictures of whatever caught my eye. I fell
+           in love with the Pacific Northwest through photography. Though there
+           are individual snapshots of which I am proud, I think the images that show the city
+           throughout the seasons and years are the most interesting. It can be difficult
+           for us to comprehend these changes in our memories, but through
+           photography, these differences are glaringly obvious. Here is a
+           collection of those photos.</p>
+
+        <div class = "line"></div>
+
+        <div class = "photoContainer">
+          <div class = "photoBox"></div>
+          <div class = "photoBox"></div>
+          <div class = "photoBox"></div>
+
+          <div class = "photoBox"></div>
+          <div class = "photoBox"></div>
+          <div class = "photoBox"></div>
+
+        </div>
 
 
 
