Minor text and formatting changes.

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 		</section>
 
 	<!-- About: Bulletpoints -->
+	<div class = "mainContent">
 		<section id = "about-bullets">
 
 	<!--
@@ -80,57 +81,56 @@
 					<div class = "right4">I am a recent college grad trying to learn new things.</div>
 				</div>
 	-->
-			<div class = "bulletContainer">
-				<div class = "titleText">I am</div>
-				<div class = "subtitleText">Stephanie Yip</div>
 
-				<div class = "titleText">I studied</div>
-				<div class = "subtitleText">Electrical and Computer Engineering</div>
+				<div class = "bulletContainer">
+					<div class = "titleText">I am</div>
+					<div class = "subtitleText">Stephanie Yip</div>
 
-				<div class = "titleText">I like</div>
-				<div class = "subtitleText">Integrating Hardware and Software,
-					Embedded Devices, Internet of Things </div>
+					<div class = "titleText">I studied</div>
+					<div class = "subtitleText">Electrical and Computer Engineering</div>
 
-				<div class = "titleText">Long story short</div>
-				<div class = "subtitleText">I am a recent college grad trying to learn new things.</div>
+					<div class = "titleText">I like</div>
+					<div class = "subtitleText">Integrating Hardware and Software,
+						Embedded Devices, Internet of Things </div>
 
-			</div>
+					<div class = "titleText">Long story short</div>
+					<div class = "subtitleText">I am a recent college grad trying to learn new things.</div>
 
+				</div>
+
+			</section>
 
 			<!-- Line divider -->
 			<div class = "line"></div>
-		</section>
+		  <!-- About: Writing -->
+			<section id = "about-writing">
+				<div class = "container">
+						<h1>About</h1>
+						<p>I graduated from Seattle University in 2017 with a B.S. in Electrical
+							and Computer Engineering. The area that fascinates me the most is the
+							integration of hardware and software. I enjoy working on projects that
+							involve both electrical engineering and computer science and seeing
+							how the two fields interact with one another. Lately, I have also been interested
+							in learning more about software and technology further up the stack.
+						 </p>
+						<p>This website serves as a portfolio of both my engineering experiences and personal interests.</p>
 
-	<!-- About: Writing -->
-		<section id = "about-writing">
-			<div class = "container">
-				<div class = "mainContent">
-					<h1>About</h1>
-					<p>I graduated from Seattle University in 2017 with a B.S. in Electrical
-						and Computer Engineering. The area that fascinates me the most is the
-						integration of hardware and software. I enjoy working on projects that
-						involve both electrical engineering and computer science and seeing
-						how the two fields interact with one another. Lately, I have also been interested
-						in learning more about software and technology further up the stack.
-					 </p>
-					<p>This website serves as a portfolio of both my engineering experiences and personal interests.</p>
+						 <!--
+						<h1>About This Website</h1>
+						<p>I have spent the past decade trying to learn HTML
+					 and CSS to create my own themes on various websites, starting with Neopets
+					 in elementary school. Now that I have more free time and experience in
+					 computer science, I decided to buckle down and finally understand how this
+					 all works. </p>
 
-					 <!--
-					<h1>About This Website</h1>
-					<p>I have spent the past decade trying to learn HTML
-				 and CSS to create my own themes on various websites, starting with Neopets
-				 in elementary school. Now that I have more free time and experience in
-				 computer science, I decided to buckle down and finally understand how this
-				 all works. </p>
+						<p>This website serves as a portfolio of my engineering projects and
+							experiences. In my free time, I dabble in photography and have
+							included that here as well.</p>-->
 
-					<p>This website serves as a portfolio of my engineering projects and
-						experiences. In my free time, I dabble in photography and have
-						included that here as well.</p>-->
 				</div>
-			</div>
+			</section>
 
-		</section>
-
+</div> <!--End of main content-->
 
 	<!-- Footer -->
 		<footer>
