--- a/photography.html
+++ b/photography.html
@@ -62,35 +62,33 @@
 		</section>
 
 	<!-- Main Content: Photography -->
-  <section id = "photography">
+  <section id = "photography" class = "mainContent">
   	<div class = "container">
-  	   <div class = "mainContent">
-         <p>I have been an avid photographer since my high school photography class.
-           During college, I enjoyed wandering Seattle with
-           my camera in tow and taking pictures of whatever caught my eye. I fell
-           in love with the Pacific Northwest through photography. Though there
-           are individual snapshots of which I am proud, I think the images that show the city
-           throughout the seasons and years are the most interesting. It can be difficult
-           for us to comprehend these changes in our memories, but through
-           photography, these differences are glaringly obvious. Here is a
-           collection of those photos.</p>
 
-        <div class = "line"></div>
+       <p>I have been an avid photographer since taking a high school photography class.
+         During college, I enjoyed wandering Seattle with
+         my camera in tow and taking pictures of whatever caught my eye. I fell
+         in love with the Pacific Northwest through photography. </p>
 
-        <div class = "photoContainer">
-          <div class = "photoBox"></div>
-          <div class = "photoBox"></div>
-          <div class = "photoBox"></div>
+         <p>Though individual photos can be beautiful, I think the images that show the city
+         throughout the seasons and years are the most interesting. It can be difficult
+         for us to comprehend these changes in our memories, but through
+         photography, these differences are glaringly obvious. Here is a
+         collection of those photos.</p>
 
-          <div class = "photoBox"></div>
-          <div class = "photoBox"></div>
-          <div class = "photoBox"></div>
+      <div class = "line"></div>
 
-        </div>
+      <div class = "photoContainer">
+        <div class = "photoBox"></div>
+        <div class = "photoBox"></div>
+        <div class = "photoBox"></div>
 
+        <div class = "photoBox"></div>
+        <div class = "photoBox"></div>
+        <div class = "photoBox"></div>
 
+      </div>
 
-       </div> <!-- END main content -->
   	</div> <!-- END container  -->
   </section>
 
