--- a/projects.html
+++ b/projects.html
@@ -81,7 +81,7 @@
 
        <h3>Overview</h3>
        <p>I learned HTML5, CSS3, and JavaScript to create this website as my engineering
-       portfolio. Currently, it is a static website hosted on GitHub.</p>
+       portfolio. Currently, it is a static website hosted using GitHub Pages.</p>
 
        <button class = "projRevealBtn" onclick = "revealSection('websiteContent', 'websiteRevealBtn')">Less <i class='fas fa-caret-up'></i></button>
 
