Added form submission confirmation page to Contact.

--- a/contact.html
+++ b/contact.html
@@ -96,6 +96,7 @@
 					<input type="hidden" name="_subject" value = "Email from your website">
 					<input type="hidden" name="_format" value="plain" />
 					<input type="text" name="_gotcha" style="display:none" />
+					<input type="hidden" name="_next" value="contactSubmit.html" />
 			</form>
 		</div>
 
@@ -115,6 +116,7 @@
 					<input type="hidden" name="_subject" value = "Email from your website">
 					<input type="hidden" name="_format" value="plain" />
 					<input type="text" name="_gotcha" style="display:none" />
+					<input type="hidden" name="_next" value="contactSubmit.html" />
 				</form>
 
 			</div>
